为listitem添加一个style属性

--- a/client/pages/home/home.wxss
+++ b/client/pages/home/home.wxss
@@ -72,6 +72,8 @@
   background: #fff;
   color: #74848c;
   z-index: 9;
+  
+  transition: .3s;
 }
 .list .listItem .adrift{
   position: absolute; 
